--- a/views/header.phtml
+++ b/views/header.phtml
@@ -2,7 +2,6 @@
 <header>
 	
 	<nav>
-		
 		<a href="index.php?page=home">
 			Accueil
 		</a>
@@ -17,13 +16,13 @@
 
 		<a href="index.php?page=register">
 			Register
-
+        </a>
 		<a href="index.php?page=home">
 			Contact
 		</a>
 
-
-
+        
+    </nav>
 	
 
 
