--- a/public/css/main.css
+++ b/public/css/main.css
@@ -77,7 +77,10 @@ header section img {
   flex: 0 1 20%;
   padding: 1em;
 }
-
+header h1 img{
+    padding: 0;
+    margin: 0;
+}
 header section nav {
   flex: 0 1 100%;
   display: flex;
