--- a/views/base.phtml
+++ b/views/base.phtml
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html>
 <head>
-	<meta charset="utf-8">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kaushan+Script|Playfair+Display">
-	<link rel="stylesheet" href="css/font-awesome.min.css">
-	<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="public/css/style.css">
-
-	<title>BLOF f1</title>
+	<title>Rest'Oran</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- ~ ~ CSS & JS Vendor ~ ~ -->
+	<link rel="stylesheet" href="public/css/normalize.css">
+	<link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Lemon" rel="stylesheet"> 
+	
+	<!-- ~ ~ CSS & JS Personnal ~ ~ -->
+	<link rel="stylesheet" type="text/css" media="screen" href="public/css/main.css" />
+	<script src="public/js/main.js"></script>
+	
 </head>
 <body>
 
 	<?php require('apps/header.php'); ?>
-	<!-- header.phtml -->
-	<?php require('apps/content.php'); ?>  <!--  le point après $page fait la concaténation
-	<!-- home.phtml OU contact.phtml -->
+	<?php require('apps/content.php'); ?>
 	<?php require('apps/footer.php'); ?>
-	<!-- footer.phtml -->
 	
 </body>
 </html>
