--- a/views/content.phtml
+++ b/views/content.phtml
@@ -1,4 +1,5 @@
-<!---  CARTE   mettre en commun a toutes les pages ---->
-
-
-
+<main>
+    <?php
+    require('apps/'.$page.'.php');
+    ?>
+</main>
