--- a/views/footer.phtml
+++ b/views/footer.phtml
@@ -1,14 +1,25 @@
-<!---  FOOTER  ---->
-
 <footer>
-	
-
-
-	<footer class="licence">
-	    <a rel="license" href="https://3wa.fr/propriete-materiel-pedagogique/"><img alt="Propriété de la 3W Academy" style="border-width:0" src="https://3wa.fr/wp-content/themes/3wa2015/img/logos/big.png" /></a><br /><span>Cet exercice</span> de <a href="https://3wa.fr">3W Academy</a> est mis à disposition <a rel="license" href="https://3wa.fr/propriete-materiel-pedagogique/">pour l'usage personnel des étudiants, Pas de Rediffusion - Attribution - Pas d'Utilisation Commerciale - Pas de Modification - International</a>.<br />Les autorisations au-delà du champ de cette licence peuvent être obtenues auprès de <a href="mailto:contact@3wa.fr" rel="cc:morePermissions">contact@3wa.fr</a>. Les maquettes ont été réalisées par <a href="http://www.justine-muller.fr">Justine Muller</a>.
-	</footer>	
-
-
-
-
+	<section>
+		<article>
+			<h3>Menu</h3>
+			<nav>
+				<a href="index.php">Accueil</a>
+				<a href="index.php">La Carte</a>
+				<a href="index.php">Réservation</a>
+				<a href="index.php">Commande</a>
+			</nav>
+		</article>
+		<article>
+			<h3>Information pratique</h3>
+			<address>99 Avenue des Champs-Elysées<br>75008 Paris<br>01 40 69 60 50</address>
+		</article>
+		<article>
+			<h3>Connexion</h3>
+			<form action="index.php" class="form-control">
+				<input type="text" name="login" id="" placeholder="Utilisateur">
+				<input type="text" name="password" id="" placeholder="Mot de passe">
+				<button type="submit">Login</button>
+			</form>
+		</article>
+	</section>
 </footer>
