--- a/views/header.phtml
+++ b/views/header.phtml
@@ -1,29 +1,15 @@
-<!-- HEADER -->
 <header>
-	
-	<nav>
-		<a href="index.php?page=home">
-			Accueil
-		</a>
-
-		<a href="index.php?page=create">
-			Article
-		</a>
-
-		<a href="index.php?page=login">
-			Login
-		</a>
-
-		<a href="index.php?page=register">
-			Register
-        </a>
-		<a href="index.php?page=home">
-			Contact
-		</a>
-
-        
-    </nav>
-	
-
-
+	<section>
+		<div>
+			<h1>Rest'Oran</h1>
+			<h2>Restaurant gatronomique spécialité Algérienne</h2>
+		</div>
+		<img src="public/img/logo.png" alt="Logo du site">
+		<nav>
+			<a href="index.php">Accueil</a>
+			<a href="index.php">La Carte</a>
+			<a href="index.php">Réservation</a>
+			<a href="index.php">Commande</a>
+		</nav>
+	</section>
 </header>
