--- a/views/home.phtml
+++ b/views/home.phtml
@@ -1,4 +1,15 @@
-<!---  HOME   mettre en commun a toutes les pages ---->
 
-
-
+	<h1>Bienvenue</h1>
+	<img src="public/img/restaurant1.jpg" alt="Image du restaurant" class="thumb">
+	<section id="presentation">
+		<article>
+			<h3>Service de qualité</h3>
+		</article>
+		<article>
+			<h3>Gastromie Algérienne Authentique</h3>
+		</article>
+		<article>
+			<h3>Produits Frais</h3>
+		</article>
+	</section>
+	
