Ajout fichier nav

--- a/views/footer.phtml
+++ b/views/footer.phtml
@@ -2,12 +2,9 @@
 	<section>
 		<article>
 			<h3>Menu</h3>
-			<nav>
-				<a href="index.php">Accueil</a>
-				<a href="index.php">La Carte</a>
-				<a href="index.php">Réservation</a>
-				<a href="index.php">Commande</a>
-			</nav>
+			<?php
+			require('apps/nav.php');
+			?>
 		</article>
 		<article>
 			<h3>Information pratique</h3>
