--- a/views/header.phtml
+++ b/views/header.phtml
@@ -5,11 +5,8 @@
 			<h2>Restaurant gatronomique spécialité Algérienne</h2>
 		</div>
 		<img src="public/img/logo.png" alt="Logo du site">
-		<nav>
-			<a href="index.php">Accueil</a>
-			<a href="index.php">La Carte</a>
-			<a href="index.php">Réservation</a>
-			<a href="index.php">Commande</a>
-		</nav>
+		<?php
+		require('apps/nav.php');
+		?>
 	</section>
 </header>
