--- a/views/delivery.phtml
+++ b/views/delivery.phtml
@@ -1,4 +1,26 @@
 <!---  DELIVERY   mettre en commun a toutes les pages ---->
-
-
-
+<h1>Livraison</h1>
+<form method="POST" class="delivery">
+	<input type="hidden" name="action" value="delivery">
+	<div>
+		<p>Nom : <input type="text" name="Name" placeholder="Name"></p>
+	</div>
+	<div>
+		<p>Tel : <input type="text" name="Tel" placeholder="Tel"></p>
+	</div>
+	<div>
+		<p>Adresse : <input type="text" name="Address" placeholder="Address"></p>
+	</div>
+	<div>
+		<p>Ville : <input type="text" name="City" placeholder="City"></p>
+	</div>
+	<div>
+		<p>Commentaire : <textarea></textarea></p>
+	</div>
+	<div>
+		<p>Date : <input type="datetime-local" name="date" placeholder="Date"></p>
+	</div>
+	<div>
+		<input type="submit" value="Commandez ! "></p>
+	</div>
+</form>
