--- a/views/base.phtml
+++ b/views/base.phtml
@@ -18,6 +18,8 @@
 
 	<?php require('apps/header.php'); ?>
 	<?php require('apps/content.php'); ?>
+	<?php require('apps/delivery.php'); ?>
+	<?php require('apps/booking.php'); ?>
 	<?php require('apps/footer.php'); ?>
 	
 </body>
