--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -34,16 +34,17 @@ a {
 	color: $color-primary-1;
 	text-decoration: none;
 	text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
+	transition: all 1s 1s;
 }
 
 a:hover, a:active, a:focus {
 	color: white;
 }
 
-header > div {
-	display: flex;
-	flex-wrap: wrap;
-}
+// header > div {
+// 	display: flex;
+// 	flex-wrap: wrap;
+// }
 
 
 header {
@@ -53,9 +54,8 @@ header {
 	padding: 0;
 	border-bottom: 1px solid $color-secondary-2-1;
 	section {
-		background: $color-secondary-2-0;
+		background: $color-secondary-2-0 url('../img/backheader.png') center bottom no-repeat;
 		background-clip: content-box;
-		background-size: 12%;
 		margin: 0;
 		padding: 0;
 		display: flex;
@@ -139,7 +139,7 @@ main,
 footer > section { max-width: 1100px; margin: 0 auto; }
 
 main {
-	background-color: $color-primary-1;
+	background: $color-primary-1;
 	padding: 1em;
 	height: 100%;
 }
@@ -171,4 +171,36 @@ main {
 	background-color: white;
 	padding: 3px;
 	box-shadow: 5px 5px 5px rgba(0,0,0,0.5);
+}
+#booking,
+#delivery {
+	fieldset {
+		border: 1px solid $color-primary-3;
+		border-radius: 1em;
+		width: 60%;
+		margin: 0 auto 1em;
+		display: flex;
+		justify-content: flex-start;
+		flex-direction: column;
+		flex-wrap: wrap;
+		p {
+			display: flex;
+		}
+		legend {
+			font-family: 'Cinzel Decorative', cursive;
+		}
+		label {
+			text-align: right;
+			padding-right: 1em;
+		}
+		input {
+			border: 1px solid $color-primary-3;
+		}
+		textarea {
+			border: 1px solid $color-primary-3;
+		}
+		button {
+			border: 1px solid $color-primary-3;
+		}
+	}
 }
