--- a/views/delivery.phtml
+++ b/views/delivery.phtml
@@ -1,26 +1,21 @@
-<!---  DELIVERY   mettre en commun a toutes les pages ---->
-<h1>Livraison</h1>
-<form method="POST" class="delivery">
+<h2>Livraison</h2>
+<form method="POST" id="delivery">
 	<input type="hidden" name="action" value="delivery">
-	<div>
-		<p>Nom : <input type="text" name="Name" placeholder="Name"></p>
-	</div>
-	<div>
-		<p>Tel : <input type="text" name="Tel" placeholder="Tel"></p>
-	</div>
-	<div>
-		<p>Adresse : <input type="text" name="Address" placeholder="Address"></p>
-	</div>
-	<div>
-		<p>Ville : <input type="text" name="City" placeholder="City"></p>
-	</div>
-	<div>
-		<p>Commentaire : <textarea></textarea></p>
-	</div>
-	<div>
-		<p>Date : <input type="datetime-local" name="date" placeholder="Date"></p>
-	</div>
-	<div>
-		<input type="submit" value="Commandez ! "></p>
-	</div>
+	<fieldset>
+		<legend>Coordonnées</legend>
+		<label for="name">Nom :</label><input type="text" name="name" placeholder="Votre nom" id="name">
+		<label for="tel">Tél :</label><input type="text" name="tel" placeholder="Votre numéro de téléphone" id="tel">
+		<label for="address">Adresse :</label><input type="text" name="address" placeholder="Votre adresse" id="address">
+		<label for="city">Ville :</label><input type="text" name="city" placeholder="Votre ville" id="city">
+	</fieldset>
+	<fieldset>
+		<label for="comment">Commentaire :</label><textarea id="comment" placeholder="Un commentaire ?"></textarea>
+	</fieldset>
+	<fieldset>
+		<legend>Réservation</legend>
+		<label for="date">Date de réservation :</label><input type="datetime-local" name="date" id="date" value="">
+	</fieldset>
+	<fieldset>
+		<button type="submit">Commandez</button>
+	</fieldset>
 </form>
