--- a/views/carte.phtml
+++ b/views/carte.phtml
@@ -1,4 +1,4 @@
-<!---  CARTE   mettre en commun a toutes les pages ---->
-
-
-
+<fieldset>
+    <legend><?=$category->getName()?></legend>
+    <?php require('apps/products.php'); ?>
+</fieldset>
