Ajout de la carte

--- a/public/css/color.scss
+++ b/public/css/color.scss
@@ -9,3 +9,5 @@ $color-secondary-2-1: #4A5975;
 $color-secondary-2-2: #2C3749;
 $color-secondary-2-3: #0D1729;
 $color-secondary-2-4: #030A16;
+
+$col-error: #a30000;
