--- a/views/carte.phtml
+++ b/views/carte.phtml
@@ -1,4 +1,6 @@
-<fieldset>
+<fieldset class="products">
     <legend><?=$category->getName()?></legend>
-    <?php require('apps/products.php'); ?>
+    <section>
+        <?php require('apps/products.php'); ?>
+    </section>
 </fieldset>
