--- a/views/footer.phtml
+++ b/views/footer.phtml
@@ -11,12 +11,7 @@
 			<address>99 Avenue des Champs-Elysées<br>75008 Paris<br>01 40 69 60 50</address>
 		</article>
 		<article>
-			<h3>Connexion</h3>
-			<form action="index.php" class="form-control">
-				<input type="text" name="login" id="" placeholder="Utilisateur">
-				<input type="text" name="password" id="" placeholder="Mot de passe">
-				<button type="submit">Login</button>
-			</form>
+			<?php require('apps/login.php'); ?>
 		</article>
 	</section>
 </footer>
