--- a/public/css/main.css
+++ b/public/css/main.css
@@ -39,12 +39,13 @@ main h1 {
 a {
   color: #B08769;
   text-decoration: none;
-  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
-  transition: all 1s 1s;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+  transition: all 0.5s;
 }
 
-a:hover, a:active, a:focus {
+header nav a:hover {
   color: white;
+  transform: scale(1.2, 1.2);
 }
 
 header {
@@ -279,6 +280,9 @@ main {
 
 .products section {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: flex-end;
 }
 
 .products section article {
