--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -43,19 +43,14 @@ main h1 {
 a {
 	color: $color-primary-1;
 	text-decoration: none;
-	text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
-	transition: all 1s 1s;
+	text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
+	transition: all 0.5s;
 }
 
-a:hover, a:active, a:focus {
+header nav a:hover {
 	color: white;
+	transform: scale(1.2,1.2);
 }
-
-// header > div {
-// 	display: flex;
-// 	flex-wrap: wrap;
-// }
-
 
 header {
 	background: $color-secondary-2-4;
@@ -185,6 +180,7 @@ main {
 	padding: 3px;
 	box-shadow: 5px 5px 5px rgba(0,0,0,0.5);
 }
+
 #booking,
 #delivery {
 	fieldset {
@@ -247,6 +243,9 @@ main {
 	}
 	section {
 		display: flex;
+		flex-wrap: wrap;
+		justify-content: flex-start;
+		align-items: flex-end;
 		article {
 			flex-basis: 20%;
 			padding: 1em;
