--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -157,7 +157,7 @@ main {
 	justify-content: space-between;
 	margin: 1em 0 0;
 	article {
-		flex: 0 1 30%;
+		flex: 1 1 auto;
 		background-color: $color-primary-2;
 		padding: 1em;
 		h3 {
@@ -173,6 +173,10 @@ main {
 	}
 }
 
+#presentation article:first-child {
+	flex: 2 1 auto;
+	margin-right: 1em;
+}
 
 .thumb {
 	max-width: 100%;
