--- a/views/home.phtml
+++ b/views/home.phtml
@@ -1,15 +1,13 @@
-
 	<h1>Bienvenue</h1>
 	<img src="public/img/restaurant1.jpg" alt="Image du restaurant" class="thumb">
 	<section id="presentation">
 		<article>
-			<h3>Service de qualité</h3>
+			<h3>Oran</h3>
+			<p>Restaurant gastronomique de qualité propose pour ses repas de midi et de soir des plats d'execptions algériens.</p>
 		</article>
 		<article>
-			<h3>Gastromie Algérienne Authentique</h3>
-		</article>
-		<article>
-			<h3>Produits Frais</h3>
+			<h3>Commentaires</h3>
+			<?php require ('apps/goldbook.php'); ?>
 		</article>
 	</section>
 	
