--- a/views/delivery.phtml
+++ b/views/delivery.phtml
@@ -1,21 +1,21 @@
 <h2>Livraison</h2>
 <form method="POST" id="delivery">
-	<input type="hidden" name="action" value="delivery">
+	<input type="hidden" name="delivery" value="delivery">
 	<fieldset>
 		<legend>Coordonnées</legend>
-		<label for="name">Nom :</label><input type="text" name="name" placeholder="Votre nom" id="name">
-		<label for="tel">Tél :</label><input type="text" name="tel" placeholder="Votre numéro de téléphone" id="tel">
-		<label for="address">Adresse :</label><input type="text" name="address" placeholder="Votre adresse" id="address">
-		<label for="city">Ville :</label><input type="text" name="city" placeholder="Votre ville" id="city">
+		<label for="name">Nom :</label><input type="text" name="customer_name" placeholder="Votre nom" id="name">
+		<label for="tel">Tél :</label><input type="text" name="customer_tel" placeholder="Votre numéro de téléphone" id="tel">
+		<label for="address">Adresse :</label><input type="text" name="customer_address" placeholder="Votre adresse" id="address">
+		<label for="city">Ville :</label><input type="text" name="customer_city" placeholder="Votre ville" id="city">
 	</fieldset>
 	<fieldset>
-		<label for="comment">Commentaire :</label><textarea id="comment" placeholder="Un commentaire ?"></textarea>
+		<label for="comment">Commentaire :</label><textarea id="comment" placeholder="Un commentaire ?" name="comments"></textarea>
 	</fieldset>
 	<fieldset>
-		<legend>Réservation</legend>
-		<label for="date">Date de réservation :</label><input type="datetime-local" name="date" id="date" value="">
+		<legend>Livraison</legend>
+		<label for="date">Date et heure de livraison :</label><input type="datetime-local" name="date" id="date" value="date">
 	</fieldset>
 	<fieldset>
-		<button type="submit">Commandez</button>
+		<button type="submit">Faite vous livrez ! </button>
 	</fieldset>
 </form>
