--- a/views/login.phtml
+++ b/views/login.phtml
@@ -2,6 +2,6 @@
 <form method="POST">
 	<input type="hidden" name="action" value="login">
 	<input type="text" name="login" id="" placeholder="Utilisateur">
-	<input type="text" name="password" id="" placeholder="Mot de passe">
+	<input type="password" name="password" id="" placeholder="Mot de passe">
 	<button type="submit">Login</button>
 </form>
