--- a/views/booking.phtml
+++ b/views/booking.phtml
@@ -1,19 +1,17 @@
 <h2>Réservation</h2>
 <form method="POST" id="booking">
-	<input type="hidden" name="booking" value="booking">
+	<input type="hidden" name="action" value="booking">
 	<fieldset>
 		<legend>Coordonnées</legend>
 		<label for="name">Nom :</label><input type="text" name="customer_name" placeholder="Votre nom" id="name">
 		<label for="tel">Tél :</label><input type="text" name="customer_tel" placeholder="Votre numéro de téléphone" id="tel">
-		<label for="address">Adresse :</label><input type="text" name="customer_address" placeholder="Votre adresse" id="address">
-		<label for="city">Ville :</label><input type="text" name="customer_city" placeholder="Votre ville" id="city">
 	</fieldset>
 	<fieldset>
 		<label for="comment">Commentaire :</label><textarea id="comment" placeholder="Un commentaire ?" name="comments"></textarea>
 	</fieldset>
 	<fieldset>
 		<legend>Réservation</legend>
-		<select>
+		<select name="date">
 		<?php
 		for ($i = 0; $i < count($dates); $i++)
 		{
