--- a/views/goldbook.phtml
+++ b/views/goldbook.phtml
@@ -1,27 +1,30 @@
 <!---  GOLDBOOK   mettre en commun a toutes les pages ---->
-<h2>Laisser un commentaire</h2>
-<form method="POST" id="booking">
+<h2>Laisser votre commentaire...</h2>
+<form method="POST" id="comments">
 	<input type="hidden" name="action" value="createcomments">
 
 	<fieldset>
 		<legend>Coordonnées</legend>
-		<label for="name">Nom :</label><input type="text" name="name" placeholder="Votre nom" id="name"><br>
-		<label for="tel">Tél :</label><input type="text" name="email" placeholder="Votre email" id="email"><br>
+		<label for="name">Nom : </label><input type="text" name="author" placeholder="Votre nom" id="author"><br><br>
+		<label for="email">Email: </label><input type="text" name="email" placeholder="Votre email" id="email"><br>
 
-	</fieldset>
+	</fieldset><br>
 
 	<fieldset>
-				<label for="tel">Tél :</label><input type="text" name="email" placeholder="Votre numéro de téléphone" id="tel"><br>
-		<label for="comment">Commentaire :</label><textarea id="comment" rows=10 cols=90 placeholder="Un commentaire ?"></textarea>
-	</fieldset>
+		<legend>Commentaire </legend>
+		
+		<textarea name="content" id="content" rows=10 cols=80 placeholder="Laissez votre commentaire... "></textarea>
+	</fieldset><br>
+
 	<fieldset>
-		<legend>Note</legend>
-		<label for="date">Date de réservation :</label><input type="datetime-local" name="date" id="date" value="">
+		<legend> Notez l'établissement</legend>
+			<label for="note">Note de 0 à 5 : </label><input type="number" min="0" max="5" name="note" placeholder="Note sur 5">
+			<br>
+	
 	</fieldset>
-	<input type="number" min="0" max="5">
-	<fieldset>
-		<button type="submit">Poster</button>
-	</fieldset>
+<br>
+		<button type="submit">Poster votre commentaire</button>
+
 </form>
 
 
