--- a/public/css/main.css
+++ b/public/css/main.css
@@ -174,6 +174,37 @@ main {
   height: 100%;
 }
 
+table {
+  width: 100%;
+  border: 0;
+  border-collapse: collapse;
+}
+
+table thead tr {
+  border-bottom: 1px solid #6E523E;
+}
+
+table tbody tr {
+  border-bottom: 1px solid #6E523E;
+}
+
+table tbody tr td {
+  padding: 0.1em 1em;
+}
+
+table tbody tr td:nth-child(2) {
+  text-align: right;
+}
+
+table tbody tr td:nth-child(3) {
+  text-align: right;
+}
+
+table tbody tr td:nth-child(3) input {
+  border: 0;
+  width: 3em;
+}
+
 #presentation {
   display: flex;
   justify-content: space-between;
@@ -207,64 +238,6 @@ main {
   background-color: white;
   padding: 3px;
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
-}
-
-#goldbook fieldset,
-#booking fieldset,
-#delivery fieldset {
-  border: 1px solid #3E230F;
-  border-radius: 1em;
-  width: 60%;
-  margin: 0 auto 1em;
-  display: flex;
-  justify-content: flex-start;
-  flex-direction: column;
-  flex-wrap: wrap;
-}
-
-#goldbook fieldset p,
-#booking fieldset p,
-#delivery fieldset p {
-  display: flex;
-}
-
-#goldbook fieldset legend,
-#booking fieldset legend,
-#delivery fieldset legend {
-  font-family: 'Cinzel Decorative', cursive;
-}
-
-#goldbook fieldset label,
-#booking fieldset label,
-#delivery fieldset label {
-  text-align: right;
-  padding-right: 1em;
-}
-
-#goldbook fieldset input,
-#booking fieldset input,
-#delivery fieldset input {
-  border: 1px solid #3E230F;
-}
-
-#goldbook fieldset textarea,
-#booking fieldset textarea,
-#delivery fieldset textarea {
-  border: 1px solid #3E230F;
-}
-
-#goldbook fieldset button,
-#booking fieldset button,
-#delivery fieldset button {
-  border: 1px solid #3E230F;
-}
-
-#goldbook {
-  width: 50%;
-}
-
-#goldbook textarea {
-  width: 50%;
 }
 
 #error {
@@ -318,5 +291,18 @@ main {
   max-width: 100%;
   border-radius: 1em;
   border: 1px solid #3E230F;
+}
+
+.flex {
+  display: flex;
+  justify-content: space-between;
+}
+
+.flex div:nth-child(1) {
+  flex: 0 1 70%;
+}
+
+.flex div:nth-child(2) {
+  flex: 0 1 20%;
 }
 /*# sourceMappingURL=main.css.map */
