--- a/views/booking.phtml
+++ b/views/booking.phtml
@@ -5,12 +5,14 @@
 		<legend>Coordonnées</legend>
 		<label for="name">Nom :</label><input type="text" name="customer_name" placeholder="Votre nom" id="name">
 		<label for="tel">Tél :</label><input type="text" name="customer_tel" placeholder="Votre numéro de téléphone" id="tel">
+		<label for="nbr">Nombre de personnes :</label><input type="text" name="nbr" placeholder="Combien êtes-vous ?" id="nbr">
 	</fieldset>
 	<fieldset>
-		<label for="comment">Commentaire :</label><textarea id="comment" placeholder="Un commentaire ?" name="comments"></textarea>
+		<legend>Laissez un commentaire</legend>
+		<textarea id="comment" placeholder="Un commentaire ?" name="comments"></textarea>
 	</fieldset>
 	<fieldset>
-		<legend>Réservation</legend>
+		<legend>Réservez</legend>
 		<select name="date">
 		<?php
 		for ($i = 0; $i < count($dates); $i++)
