--- a/views/delivery.phtml
+++ b/views/delivery.phtml
@@ -1,14 +1,14 @@
 <h2>Livraison</h2>
 <form method="POST" id="delivery">
 	<input type="hidden" name="action" value="delivery">
-	<div style="width:100%">
-		<div style="height:600px;overflow:auto;width:50%;display:inline-block">
-			<table border="1">
+	<div class="flex"> 
+		<div>
+			<table>
 				<thead>
 					<tr>
 						<th>Produits</th>
 						<th>Prix Unitaire</th>
-						<th>Quantité à commander</th>
+						<th></th>
 					</tr>
 				</thead>
 				<tbody>
@@ -22,18 +22,18 @@
 				</tbody>
 			</table>
 		</div>
-		<div style="height:600px;width:49%;float:right">
-			<fieldset style="width:100%">
+		<div>
+			<fieldset>
 				<legend>Coordonnées</legend>
 				<label for="name">Nom :</label><input type="text" name="customer_name" placeholder="Votre nom" id="name">
 				<label for="tel">Tél :</label><input type="text" name="customer_tel" placeholder="Votre numéro de téléphone" id="tel">
 				<label for="address">Adresse :</label><input type="text" name="customer_address" placeholder="Votre adresse" id="address">
 				<label for="city">Ville :</label><input type="text" name="customer_city" placeholder="Votre ville" id="city">
 			</fieldset>
-			<fieldset style="width:100%">
+			<fieldset>
 				<label for="comment">Commentaire :</label><textarea id="comment" placeholder="Un commentaire ?" name="comments"></textarea>
 			</fieldset>
-			<fieldset style="width:100%">
+			<fieldset>
 				<legend>Livraison</legend>
 				<label for="date">Date et heure de livraison :</label>
 				<select name="date">
@@ -43,7 +43,7 @@
 			<br><br><br>
 			<hr>
 			<br><br><br>
-			<center><button type="submit" style="background-color:green;border:none;border-radius:50px;height:50px;width:200px">Faite vous livrez ! </button></center>
+			<button type="submit">Faites vous livrez ! </button>
 		</div>
 	</div>
 </form>
