Ajout étoile note

--- a/views/home.phtml
+++ b/views/home.phtml
@@ -2,12 +2,17 @@
 	<img src="public/img/restaurant1.jpg" alt="Image du restaurant" class="thumb">
 	<section id="presentation">
 		<article>
+			<div>
+				<?php
+				 require('apps/booking.php');
+				?>
+			</div>
 			<h3>Oran</h3>
 			<p>Restaurant gastronomique de qualité propose pour ses repas de midi et de soir des plats d'execptions algériens.</p>
 		</article>
 		<article>
 			<h3>Commentaires</h3>
-			<?php require ('apps/goldbook.php'); ?>
+			<?php require('apps/goldbook.php'); ?>
 		</article>
 	</section>
 	
