--- a/views/comment.phtml
+++ b/views/comment.phtml
@@ -1,12 +1,5 @@
 <div class = "commentcontainer">
-	<h3>Avis client</h3>
-
-		<p>Le  <?=$comment->getDate()?>  <br>
-
-			<?=$comment->getAuthor()?> a écrit : <?=$comment->getContent()?>
-			 </p>
-			 <p align="right"> Note : <?=$comment->getNote()?> </p>
-
-
-	
+	<p>Le <?=$comment->getDate()?></p>
+	<p><?=$comment->getAuthor()?> a écrit : <?=$comment->getContent()?></p>
+	<p align="right"> Note : <?php require('apps/note.php'); ?> </p>
 </div>
