--- a/views/goldbook.phtml
+++ b/views/goldbook.phtml
@@ -1,30 +1,14 @@
-<!---  GOLDBOOK   mettre en commun a toutes les pages ---->
-<h2>Laisser votre commentaire...</h2>
 <form method="POST" id="comments">
 	<input type="hidden" name="action" value="createcomments">
 
 	<fieldset>
-		<legend>Coordonnées</legend>
+		<legend>Laissez un commentaire</legend>
 		<label for="name">Nom : </label><input type="text" name="author" placeholder="Votre nom" id="author"><br><br>
 		<label for="email">Email: </label><input type="text" name="email" placeholder="Votre email" id="email"><br>
-
-	</fieldset><br>
-
-	<fieldset>
-		<legend>Commentaire </legend>
-		
-		<textarea name="content" id="content" rows=10 cols=80 placeholder="Laissez votre commentaire... "></textarea>
-	</fieldset><br>
-
-	<fieldset>
-		<legend> Notez l'établissement</legend>
-			<label for="note">Note de 0 à 5 : </label><input type="number" min="0" max="5" name="note" placeholder="Note sur 5">
-			<br>
-	
-	</fieldset>
-<br>
+		<label for="note">Note de 0 à 5 : </label><input type="number" min="0" max="5" name="note" placeholder="Note sur 5">		
+		<textarea name="content" id="content" placeholder="Laissez votre commentaire... "></textarea>
 		<button type="submit">Poster votre commentaire</button>
-
+	</fieldset>
 </form>
 
 
