ajout comment phtml

--- a/views/comment.phtml
+++ b/views/comment.phtml
@@ -3,9 +3,9 @@
 
 		<p>Le  <?=$comment->getDate()?>  <br>
 
-			<?=$comment->getAuthor()?> a écrit : <?=$comment->getContent()?>
+			<?=$comment->getAuthor()?> a écrit :  <?=$comment->getContent()?>
 			 </p>
-			 <p align="right"> Note : <?=$comment->getNote()?> </p>
+			 <p align="right"> Note : <?=$comment->getNote()?> / 5</p> 
 
 
 	
