--- a/views/goldbook.phtml
+++ b/views/goldbook.phtml
@@ -1,5 +1,5 @@
 <!---  GOLDBOOK   mettre en commun a toutes les pages ---->
-<h2>Laisser votre commentaire...</h2>
+<h2 align="center" style = "color:gray">Laisser votre commentaire...</h2>
 <form method="POST" id="comments">
 	<input type="hidden" name="action" value="createcomments">
 
@@ -23,7 +23,7 @@
 	
 	</fieldset>
 <br>
-		<button type="submit">Poster votre commentaire</button>
+		<p align="center"><button type="submit">Poster votre commentaire</button></p>
 
 </form>
 
